--- a/tambah_pendaftar.html
+++ b/tambah_pendaftar.html
@@ -248,12 +248,6 @@
                                                 aria-controls="custom-tabs-three-keluarga"
                                                 aria-selected="false">Keluarga</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="custom-tabs-three-seleksi-tab" data-toggle="pill"
-                                                href="#custom-tabs-three-seleksi" role="tab"
-                                                aria-controls="custom-tabs-three-seleksi"
-                                                aria-selected="false">Seleksi</a>
-                                        </li>
                                     </ul>
                                 </div>
                                 <div class="card-body">
@@ -442,6 +436,9 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <div class="col-12 mt-4">
+                                                    <button type="submit" class="btn btn-warning">Simpan</button>
+                                                </div>
                                             </form>
                                         </div>
                                         <!-- Akhir Akademis -->
@@ -514,10 +511,6 @@
                                                     <button type="submit" class="btn btn-warning">Simpan</button>
                                                 </div>
                                             </form>
-                                        </div>
-                                        <div class="tab-pane fade" id="custom-tabs-three-seleksi" role="tabpanel"
-                                            aria-labelledby="custom-tabs-three-seleksi-tab">
-                                            Seleksi
                                         </div>
                                     </div>
                                 </div>
