--- a/tambah_pendaftar.html
+++ b/tambah_pendaftar.html
@@ -131,7 +131,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="#" class="nav-link active">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Tambah Baru</p>
                                     </a>
