--- a/index.html
+++ b/index.html
@@ -337,8 +337,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <label for="inputState">Status</label>
                         <select id="inputState" class="form-control">
                           <option selected>Semua</option>
-                          <option>Tervirifikasi</option>
-                          <option>Menunggu Verifikasi</option>
+                          <option>Lolos</option>
+                          <option>Tidak Lolos</option>
+                          <option>Dibatalkan</option>
                         </select>
                       </div>
                       <div class="form-group col-md-3">
